2006-10-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-panel-screenshot.c: Remove the unneeded headers
	Xmu/WinUtil.h and cursorfont.h. (closes #167089)

2006-10-18  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c: Remove the useless target
	"x-special/gnome-icon-list", as we already support
	text/uri-list and we don't pass any of the icon
	data with DnD.
	
	(drag_data_get): Fix the URI passed via DnD using the
	gtk_selection_data_set_uris() API function instead of
	manually building the URI list. (closes #361016, reported
	by Stephan Delcroix)

2006-09-26  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-screenshot.desktop.in: Add the OtherBinaries key
	for Bugzilla to the desktop file.

2006-09-26  Ross Burton  <ross@burtonini.com>

	* screenshot-dialog.c:
	Implement the advertised dragging of image data (#354685).

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-shadow.c (create_outline_filter): outline
	filter is now a filled square instead of filled
	circle. (#310860, Emmanuel Pacaud)

2006-08-25  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c (screenshot_dialog_new): Use the
	UTF-8 functions to select just the file name and not the
	extension. (#348896, Kouhei Sutou)

2006-08-08  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-utils.c (get_window_property): Fix the
	call to XGetWindowProperty that got mangled by the
	compiler fixes patch of bug #318095. (#350447)

2006-07-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c (screenshot_dialog_new): Use
	g_utf8_strrchr() to find the last mark before the
	extension.

2006-06-14  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* screenshot-dialog.c: Fix includes.

2006-06-11  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-egg-xfer-dialog.c:
	* screenshot-dialog.c:
	* screenshot-save:
	* screenshot-utils.c:
	* screenshot-xfer.c: Fix includes, and drop deprecated I18N
	header gnome-i18n.h (Kristof Vansant, #167098).
